# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.103 2005/03/25 01:07:26 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  23 Mar 2005; Preston Cody <codeman@gentoo.org>
  small changes to setup_network_post. moved adding to runlevel of net.x to
  after the device gets symlinked.  added domainname runlevel command.
  
  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  minor fix (hopefully) to livecd-kernel code. Removed call to mkvardb in
  livecd-kernel code as it's now done by catalyst. Switch _emerge() call to
  spawn() call in livecd-kernel code to pass environment variables.

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added code to build_kernel() and emerge_kernel_sources() in ArchTemplate
  to handle installing the livecd kernel into the new system.

  22 Mar 2005; Preston Cody <codeman@gentoo.org>
  should emerge hotplug and coldplug before adding them to runlevel.

  21 Mar 2005; Preston Cody <codeman@gentoo.org>
  took chroot out of grub_install command. 

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed chroot wrapper code in spawn() to write the wrapper the python way
  instead of the bash way to avoid quote conflicts.  Added
  'logfile=self._compile_logfile' to a number of spawn() calls. Added new
  hash_password() function to GLIUtility. Remove command to 'rm /tmp/spawn.sh'
  as it breaks the piping.

  20 Mar 2005; Preston Cody <codeman@gentoo.org>
  Added the amd64ArchitectureTemplate, mostly a copy of x86 without lilo.

  20 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added _get_packages_to_emerge() to GLIArchitectureTemplate and calls in
  stage1() and stage2(). Added 'origminor' parameter to GLIStorageDevice and
  GLIInstallProfile.

  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed a couple bugs in add_netmount() in GLIInstallProfile. spawn() outputs