@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.103 2005/03/25 01:07:26 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.104 2005/03/25 05:30:28 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
@@ -12,6 +12,8 @@
   minor fix (hopefully) to livecd-kernel code. Removed call to mkvardb in
   livecd-kernel code as it's now done by catalyst. Switch _emerge() call to
   spawn() call in livecd-kernel code to pass environment variables.
+  livecd-kernel code pulls PKGDIR and PORTAGE_TMPDIR from make.conf info in
+  the install profile if available.
 
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added code to build_kernel() and emerge_kernel_sources() in ArchTemplate
